# Salloc

./: CMakeLists.txt  README.md  build.bat  build.sh
.github/workflows/: cmake-build.yml
include/allocator/: allocator.h  block_allocator.h  common.h  fixed_block_allocator.h  linear_allocator.h  predefined_block_allocator.h  stack_allocator.h
include/salloc/: allocator.h  fixed_block_allocator.h  linear_allocator.h  predefined_block_allocator.h  stack_allocator.h
src/: CMakeLists.txt  block_allocator.cpp  linear_allocator.cpp  main.cpp  predefined_block_allocator.cpp  stack_allocator.cpp
test/: CMakeLists.txt  test.cpp
